...
            VStack(spacing: 20) {
                ScrollView {
                    Spacer().frame(height: 20)
                    VStack(spacing: 5) {
                        Text("Hey Coach!")
                            .font(.title3).bold()
                            .accessibilityIdentifier("page.signup.coach.title")
                        
                        // Text link to navigate to the login screen
                        HStack {
                            Text("I already have an account!")
                                .foregroundColor(.gray)
                                .font(.footnote)
...
                    
                    // Form Fields with Uniform Style
                    VStack (spacing: 10) {
                        // First Name Text Field
                        CustomUIFields.customTextField("First Name", text: $viewModel.firstName)
                            .autocorrectionDisabled(true)
                            .accessibilityIdentifier("page.signup.coach.firstName")

                        // Last Name Text Field
                        CustomUIFields.customTextField("Last Name", text: $viewModel.lastName)
                            .autocorrectionDisabled(true)
                            .accessibilityIdentifier("page.signup.coach.lastName")

                        // Date Picker Styled Like Other Fields
                        HStack {
                            Text("Date of Birth")
//                                .foregroundColor(.gray)
                            Spacer()
...
                            .autocorrectionDisabled(true)
                            .keyboardType(.phonePad) // Shows phone-specific keyboard
                            .onChange(of: viewModel.phone) { newVal in
                                // Formats the phone number when it changes
                                viewModel.phone = formatPhoneNumber(newVal)
                            }
                            .accessibilityIdentifier("page.signup.coach.phone")
                        
                        // Country Picker
                        HStack {
                            Text("Country or region")
                                .padding(.horizontal)
                            Spacer()
...
                        
                        // Email Field
                        CustomUIFields.customTextField("Email", text: $viewModel.email)
                            .autocapitalization(.none)
                            .autocorrectionDisabled(true)
                            .keyboardType(isUITest ? .default : .emailAddress) // Shows email-specific keyboard
                            .accessibilityIdentifier("page.signup.coach.email")
                            .textContentType(isUITest ? .none : .emailAddress)

                        // Password Field with Eye Toggle
                        Group {
                            if isUITest {
                                CustomUIFields.customTextField("Password", text: $viewModel.password)
                                    .accessibilityIdentifier("page.signup.coach.password")
                                    .textInputAutocapitalization(.never)
                                    .disableAutocorrection(true)
                            } else {
                                CustomUIFields.customPasswordField("Password", text: $viewModel.password, showPassword: $showPassword)
                                    .accessibilityIdentifier("page.signup.coach.password")
                            }
...
                        // Call sign-up method when button is tapped
                        Task {
                            do {
                                // Check if the email already exists
                                guard try await viewModel.verifyEmailAddress() == nil else {
                                    showErrorAlert = true
                                    return
                                }
                                
                                // Attempt to sign up the coach
                                try await viewModel.signUp(userType: .coach)
                                
                                // After successful signup, close the sign-in view
...
                    } label: {
                        // Use the custom styled "Create Account" button
                        CustomUIFields.createAccountButton("Create Account")
                    }
                    .disabled(!signUpIsValid)
                    .opacity(signUpIsValid ? 1.0 : 0.5)
                    .accessibilityIdentifier("page.signup.coach.createAccountBtn")
                    
                    Spacer()
                }.alert("Account exists", isPresented: $showErrorAlert){
                    Button(role: .cancel) {
                        viewModel.resetAccountFields()
                        errorGoToLogin = true
                    } label: {
                        Text("Login")
                    }
                    Button("OK") {
                        viewModel.resetAccountFields()
                    }
                } message: {
                    Text("An account with that email address already exists. Please sign in.")
                }
                .navigationDestination(isPresented: $errorGoToLogin) {
...
