...
                    VStack(spacing: 10) {
                        // Email Input Field
                        CustomUIFields.customTextField("Email", text: $authModel.email)
                            .autocapitalization(.none)
                            .autocorrectionDisabled(true)
                            .keyboardType(.emailAddress) // Shows email-specific keyboard
                            .accessibilityIdentifier("page.player.login.emailField")

                        // Password Field with Eye Toggle
                        CustomUIFields.customPasswordField("Password", text: $authModel.password, showPassword: $showPassword)
                            .accessibilityIdentifier("page.player.login.passwordField")
                    }
                    .padding(.horizontal)
                    
                    Button {
                        Task {
                            do {
...
                    } label: {
                        // Custom Styled Login Button
                        CustomUIFields.signInAccountButton("Get coached!")
                    }
                    .disabled(!loginIsValid)
                    .opacity(loginIsValid ? 1.0 : 0.5)
                    .accessibilityIdentifier("page.player.login.signInBtn")
                }
            }
            .alert("Invalid credentials. Please try again.", isPresented: $showErrorMessage) {
                Button(role: .cancel) {
                    // reset email and password
                    authModel.email = ""
                    authModel.password = ""
                } label: {
                    Text("OK")
                }
            }
            .alert("Account Not Found", isPresented: $showErrorAlert) {
                Button(role: .cancel) {
                    authModel.email = ""
                    authModel.password = ""
                    errorGoToSignUp = true
                } label: {
                    Text("Sign Up")
...
                PlayerCreateAccountView(showSignInView: $showSignInView, viewModel: authModel)
            }
            .onAppear {
                authModel.setDependencies(dependencies)
            }
        }
        .accessibilityIdentifier("page.player.login")
    }
}


// MARK: - File extension

...
