...

                // Form Fields with Uniform Style
                VStack(spacing: 10) {
                    // Custom text field for the player's first name
                    CustomUIFields.customTextField("First Name", text: $viewModel.firstName)
                        .autocorrectionDisabled(true)
                        .accessibilityIdentifier("page.signup.player.firstName")
                    
                    // Custom text field for the player's last name
                    CustomUIFields.customTextField("Last Name", text: $viewModel.lastName)
                        .autocorrectionDisabled(true)
                        .accessibilityIdentifier("page.signup.player.lastName")

                    // Custom date picker for selecting the player's date of birth
                    HStack {
                        Text("Date of Birth")
                        Spacer()
                        DatePicker("", selection: $viewModel.dateOfBirth, displayedComponents: .date)
...
                        .autocorrectionDisabled(true)
                        .keyboardType(.phonePad) // Shows phone-specific keyboard
                        .onChange(of: viewModel.phone) { newVal in
                            // Formats the phone number when it changes
                            viewModel.phone = formatPhoneNumber(newVal)
                        }
                        .accessibilityIdentifier("page.signup.player.phone")
                    
                    // Country picker with a list of countries
                    HStack {
                        Text("Country or region")
                            .padding(.horizontal)
                        Spacer()
...

                    // Custom password field for the user to set their password
                    // Password Field with Eye Toggle
                    Group {
                        if isUITest {
                            CustomUIFields.customTextField("Password", text: $viewModel.password)
                                .accessibilityIdentifier("page.signup.player.password")
                                .textInputAutocapitalization(.never)
                                .disableAutocorrection(true)
                        } else {
                            CustomUIFields.customPasswordField("Password", text: $viewModel.password, showPassword: $showPassword)
                                .accessibilityIdentifier("page.signup.player.password")
                        }
...
                } label: {
                    // Custom button styled for creating the account
                    CustomUIFields.createAccountButton("Create Account")
                }
                .disabled(!signUpIsValid)
                .opacity(signUpIsValid ? 1.0 : 0.5)
                .accessibilityIdentifier("page.signup.player.signUpBtn")
            }
            .alert("Invalid Access Code", isPresented: $invalidAccessCodeAlert){
                Button("OK") {
                    viewModel.resetAccountFields()
                    errorGoToLandingPage = true
                }
            } message: {
                Text("Invalid team access code entered.")
...
