...
                ScrollView{
                    // Welcome Message
                    Spacer().frame(height: 20)
                    VStack(spacing: 5) {
                        Text("Glad to have you back Coach!")
                            .font(.title3).bold()
                            .accessibilityIdentifier("coachLoginPage.title")
                        
                        // Navigation link to the account creation view
                        HStack {
                            Text("I don't have an account!")
                                .foregroundColor(.gray)
                                .font(.footnote)
...
                    VStack {
                        // Email Input Field
                        CustomUIFields.customTextField("Email", text: $authModel.email)
                            .autocapitalization(.none)
                            .keyboardType(.emailAddress)
                            .autocorrectionDisabled(true)
                            .accessibilityIdentifier("coachLoginPage.emailField")

                        // Password Field with Eye Toggle
                        CustomUIFields.customPasswordField("Password", text: $authModel.password, showPassword: $showPassword)
                            .accessibilityIdentifier("coachLoginPage.passwordField")
                    }
                    .padding(.horizontal)
                    
                    // "Let's go!" Button
                    Button {
                        Task {
...
                    } label: {
                        // Custom Sign-In Button
                        CustomUIFields.signInAccountButton("Let's go!")
                    }
                    .disabled(!loginIsValid)
                    .opacity(loginIsValid ? 1.0 : 0.5)
                    .accessibilityIdentifier("coachLoginPage.signInButton")
                    
                    Spacer()
                }
            }
            .alert("Invalid credentials. Please try again.", isPresented: $showErrorMessage) {
                Button(role: .cancel) {
...
